--- a/src/pages/style.scss
+++ b/src/pages/style.scss
@@ -64,6 +64,38 @@
   letter-spacing: 0;
 }
 
+@mixin h9 {
+  font-family: $font-primary;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  letter-spacing: 0;
+}
+
+@mixin base-1 {
+  font-family: $font-secondary;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 28px;
+  letter-spacing: 0;
+}
+
+@mixin base-3 {
+  font-family: $font-secondary;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  letter-spacing: 0;
+}
+
+@mixin base-5 {
+  font-family: $font-secondary;
+  font-size: 12px;
+  font-weight: 500;
+  line-height: 16px;
+  letter-spacing: .25px;
+}
+
 @mixin base-1 {
   font-family: $font-secondary;
   font-size: 20px;
