--- a/src/pages/style.scss
+++ b/src/pages/style.scss
@@ -48,6 +48,14 @@
   letter-spacing: 0;
 }
 
+@mixin h5 {
+  font-family: $font-primary;
+  font-size: 28px;
+  font-weight: 400;
+  line-height: 36px;
+  letter-spacing: 0;
+}
+
 @mixin h6 {
   font-family: $font-primary;
   font-size: 24px;
@@ -85,6 +93,14 @@
   font-size: 16px;
   font-weight: 400;
   line-height: 24px;
+  letter-spacing: 0;
+}
+
+@mixin base-4 {
+  font-family: $font-secondary;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 20px;
   letter-spacing: 0;
 }
 
