--- a/src/components/index-page/Ecosystem/styles.scss
+++ b/src/components/index-page/Ecosystem/styles.scss
@@ -64,9 +64,11 @@
       }
 
       &__main {
+        display: flex;
+        justify-content: space-between;
         height: 540px;
         margin-top: 32px;
-        padding: 48px;
+        padding: 48px 48px 0 48px;
         background-color: #111316;
 
         &__about {
@@ -95,6 +97,50 @@
 
             margin-top: 8px;
             color: #a7aeb7;
+          }
+
+          &__platforms-title {
+            @include section-title-md;
+
+            margin-top: 24px;
+            color: $c_white;
+          }
+
+          &__platforms {
+            @include base-3;
+
+            margin-top: 8px;
+            color: #a7aeb7;
+          }
+
+          &__link {
+            display: inline-block;
+            margin-top: 24px;
+            font-family: $font-primary;
+            font-size: 18px;
+            font-weight: 400;
+            line-height: 24px;
+            letter-spacing: 0;
+            color: #6c6cff;
+
+            &__icon {
+              margin-bottom: -3px;
+              margin-left: 8px;
+              transform: rotate(-90deg) scale(.8);
+            }
+          }
+        }
+
+        &__visual {
+          position: relative;
+          max-width: 720px;
+
+          &__bottom-gradient {
+            position: absolute;
+            bottom: 0;
+            width: 100%;
+            height: 136px;
+            background: linear-gradient(180deg, rgba(17, 19, 22, 0) 0%, #111316 100%);
           }
         }
       }
