--- a/src/pages/style.scss
+++ b/src/pages/style.scss
@@ -72,6 +72,14 @@
   letter-spacing: 0;
 }
 
+@mixin h8 {
+  font-family: $font-primary;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 24px;
+  letter-spacing: 0;
+}
+
 @mixin h9 {
   font-family: $font-primary;
   font-size: 16px;
