Update payouts and video nfts desktop sections design

--- a/src/components/index-page/Ecosystem/styles.scss
+++ b/src/components/index-page/Ecosystem/styles.scss
@@ -200,6 +200,10 @@
             color: $c_white;
             background-color: $c_blue-ribbon;
 
+            &:hover {
+              background-color: $c_han_purple;
+            }
+
             &__icon {
               margin-bottom: -3px;
               margin-left: 12px;
