--- a/src/components/index-page/CreatorTokens/style.scss
+++ b/src/components/index-page/CreatorTokens/style.scss
@@ -1,92 +1,74 @@
-@import '../../../styles/main';
-@import '../../../pages/style';
+@import '../../../styles/_main.scss';
+@import '../../../pages/style.scss';
 
 .IndexPage {
   &__creator-tokens-wrapper {
-    padding: 96px 0;
+    padding-top: 96px;
     background-color: #111316;
   }
 
   &__creator-tokens {
     @extend %container;
 
-    &__hero {
-      position: relative;
-      display: flex;
-      align-items: center;
-      flex-direction: column;
+    &__main {
+      display: grid;
+      height: 512px;
+      gap: 30px;
+      grid-template-columns: 500px auto;
 
-      &__coming-soon {
-        @include base-5;
+      &__content {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
 
-        padding: 4px 8px;
-        color: #a7aeb7;
-        background-color: #1f252e;
-        border-radius: 10px;
-      }
+        &__section-title {
+          @include section-title;
 
-      &__section-title {
-        @include section-title;
+          color: #6c6cff;
+        }
 
-        display: block;
-        margin-top: 32px;
-        color: #6c6cff;
-        text-align: center;
-      }
+        &__title {
+          @include h3;
 
-      &__title {
-        @include h3;
+          margin-top: 4px;
+          color: $c_white;
+        }
 
-        max-width: 816px;
-        margin-top: 4px;
-        color: $c_white;
-        text-align: center;
-      }
+        &__subtitle {
+          @include base-1;
 
-      &__subtitle {
-        @include base-1;
+          margin-top: 16px;
+          color: #a7aeb7;
+        }
 
-        max-width: 816px;
-        margin-top: 16px;
-        color: #a7aeb7;
-        text-align: center;
-      }
+        &__link {
+          margin-top: 32px;
+          font-family: $font-primary;
+          font-size: 20px;
+          font-weight: 400;
+          line-height: 28px;
+          letter-spacing: 0;
+          color: #6c6cff;
 
-      &__link {
-        margin-top: 32px;
-        font-family: $font-primary;
-        font-size: 20px;
-        font-weight: 400;
-        line-height: 28px;
-        letter-spacing: 0;
-        color: #6c6cff;
-
-        &__arrow {
-          margin-bottom: -3px;
-          margin-left: 10px;
-          transform: rotate(-90deg) scale(.8);
+          &__arrow {
+            margin-bottom: -3px;
+            margin-left: 10px;
+            transform: rotate(-90deg) scale(.8);
+          }
         }
       }
 
       &__illustration {
         position: relative;
-        width: 100%;
-        height: 756px;
-        margin-top: 80px;
+        height: 512px;
         overflow: hidden;
 
         &__background {
           position: absolute;
-          top: 0;
-          right: 0;
-          width: 960px;
         }
 
         &__foreground {
           position: absolute;
-          top: 182px;
-          left: 80px;
-          width: 312px;
         }
       }
 
@@ -94,16 +76,21 @@
         position: absolute;
         bottom: -5px;
         width: 100%;
-        height: 161px;
+        height: 128px;
         background: linear-gradient(180deg, rgba(17, 19, 22, 0) 0%, #111316 100%);
       }
     }
 
-    &__fundraising {
+    &__grid {
       display: grid;
       margin-top: 64px;
-      gap: 30px;
-      grid-template-columns: auto 500px;
+      gap: 30px 64px;
+      grid-template-columns: 1fr 1fr;
+    }
+
+    &__fundraising {
+      display: flex;
+      flex-direction: column;
 
       &__illustration {
         display: flex;
@@ -114,6 +101,9 @@
         display: flex;
         flex-direction: column;
         justify-content: center;
+        max-width: 480px;
+        margin: 0 auto;
+        margin-top: 32px;
 
         &__section-title {
           @include section-title-md;
@@ -138,15 +128,16 @@
     }
 
     &__stable-income {
-      display: grid;
-      margin-top: 64px;
-      gap: 30px;
-      grid-template-columns: 500px auto;
+      display: flex;
+      flex-direction: column;
 
       &__content {
         display: flex;
         flex-direction: column;
         justify-content: center;
+        max-width: 480px;
+        margin: 0 auto;
+        margin-top: 32px;
 
         &__section-title {
           @include section-title-md;
@@ -176,20 +167,16 @@
     }
 
     &__secure-listing {
-      display: grid;
-      margin-top: 64px;
-      gap: 30px;
-      grid-template-columns: auto 500px;
-
-      &__illustration {
-        display: flex;
-        justify-content: center;
-      }
+      display: flex;
+      flex-direction: column;
 
       &__content {
         display: flex;
         flex-direction: column;
         justify-content: center;
+        max-width: 480px;
+        margin: 0 auto;
+        margin-top: 32px;
 
         &__section-title {
           @include section-title-md;
@@ -211,18 +198,24 @@
           color: #a7aeb7;
         }
       }
+
+      &__illustration {
+        display: flex;
+        justify-content: center;
+      }
     }
 
     &__share-upside {
-      display: grid;
-      margin-top: 64px;
-      gap: 30px;
-      grid-template-columns: 500px auto;
+      display: flex;
+      flex-direction: column;
 
       &__content {
         display: flex;
         flex-direction: column;
         justify-content: center;
+        max-width: 480px;
+        margin: 0 auto;
+        margin-top: 32px;
 
         &__section-title {
           @include section-title-md;
@@ -253,6 +246,59 @@
     }
   }
 
+  &__atlas-cta {
+    @extend %largeContainer;
+
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    margin-top: 96px;
+    padding-bottom: 96px;
+    background-image: url('../../../assets/svg/landing/video-nfts-cta-background.svg');
+    background-position: bottom 0 left 0;
+    background-repeat: no-repeat;
+
+    &__title {
+      @include h3;
+
+      max-width: 816px;
+      color: $c_white;
+      text-align: center;
+    }
+
+    &__caption {
+      display: flex;
+      align-items: center;
+      flex-direction: column;
+
+      &__about {
+        @include base-3;
+
+        margin-top: 16px;
+        color: #a7aeb7;
+      }
+
+      &__podcast {
+        @include base-5;
+
+        margin-top: 4px;
+        font-style: normal;
+        color: #5c6475;
+      }
+    }
+
+    &__button {
+      width: 229px;
+      height: 60px;
+      margin-top: 48px;
+      padding: 18px 15px !important;
+    }
+
+    &__button-text {
+      @include landing-page-button-text;
+    }
+  }
+
   @media #{$screen-max-lg} {
     &__creator-tokens {
       &__hero {
@@ -273,6 +319,10 @@
       &__share-upside {
         padding: 0 10px;
       }
+    }
+
+    &__atlas-cta {
+      background-position: bottom 0 left -70px;
     }
   }
 
@@ -351,6 +401,14 @@
             @include h7;
           }
         }
+      }
+    }
+
+    &__atlas-cta {
+      background: none;
+
+      &__title {
+        max-width: 620px;
       }
     }
   }
@@ -449,6 +507,15 @@
       &__stable-income,
       &__share-upside {
         flex-direction: column-reverse;
+      }
+    }
+
+    &__atlas-cta {
+      margin-top: 64px;
+      padding-bottom: 80px;
+
+      &__title {
+        @include h4;
       }
     }
   }
