Add IBM Plex Mono font and implement it in the developers code section

--- a/src/styles/common/_variables.scss
+++ b/src/styles/common/_variables.scss
@@ -18,3 +18,4 @@ $navbar-height: 80px;
 
 $font-primary: PxGroteskRegular, sans-serif;
 $font-secondary: Inter, sans-serif;
+$font-ibm-mono: IBM Plex Mono, sans-serif;
