--- a/src/components/index-page/Ecosystem/styles.scss
+++ b/src/components/index-page/Ecosystem/styles.scss
@@ -231,8 +231,7 @@
             color: $c_white;
 
             & > span {
-              // TODO: Update this font here!
-              font-family: $font-primary;
+              font-family: $font-ibm-mono;
               font-size: 16px;
               font-weight: 500;
               line-height: 24px;
@@ -243,8 +242,7 @@
 
             & > code {
               margin-left: 20px;
-              // TODO: Update this font here (IBM Plex Mono)!
-              font-family: $font-secondary;
+              font-family: $font-ibm-mono;
               font-size: 16px;
               font-weight: 500;
               line-height: 24px;
