--- a/src/components/index-page/Ecosystem/styles.scss
+++ b/src/components/index-page/Ecosystem/styles.scss
@@ -261,10 +261,10 @@
       &__steps {
         display: flex;
         justify-content: space-between;
-        margin-top: 110px;
+        margin-top: 64px;
 
         &__item {
-          width: 292.5px;
+          width: 284px;
           height: 292px;
           padding: 24px;
           background-color: #111316;
@@ -310,6 +310,33 @@
 
             margin-top: 16px;
             color: #a7aeb7;
+          }
+        }
+      }
+    }
+  }
+
+  @media (max-width: 1250px) {
+    &__ecosystem {
+      &__developers {
+        &__steps {
+          overflow-x: scroll;
+          gap: 24px;
+          scrollbar-width: none;
+
+          &::-webkit-scrollbar {
+            display: none;
+          }
+
+          &__item {
+            width: 288px;
+            min-width: 288px;
+
+            &:nth-child(2),
+            &:nth-child(3),
+            &:nth-child(4) {
+              margin-top: 0;
+            }
           }
         }
       }
