--- a/src/components/index-page/Payouts/style.scss
+++ b/src/components/index-page/Payouts/style.scss
@@ -381,7 +381,7 @@
 
   @media #{$screen-max-sm} {
     &__payouts-wrapper {
-      padding: 80px 0;
+      padding-top: 80px;
     }
 
     &__payouts-atlas {
