--- a/src/components/index-page/Ecosystem/styles.scss
+++ b/src/components/index-page/Ecosystem/styles.scss
@@ -32,6 +32,10 @@
 
         margin-top: 4px;
         color: $c_white;
+
+        & > br {
+          display: none;
+        }
       }
 
       &__subtitle {
@@ -148,9 +152,8 @@
 
       &__info {
         display: flex;
-        // align-items: center;
         justify-content: center;
-        margin: 34px auto 0 auto;
+        margin: 32px auto 0 auto;
 
         &__text {
           @include base-5;
@@ -393,6 +396,12 @@
 
   @media #{$screen-max-md} {
     &__ecosystem {
+      &__hero {
+        &__subtitle {
+          max-width: 650px;
+        }
+      }
+
       &__apps {
         &__title {
           max-width: 730px;
@@ -465,9 +474,34 @@
   }
 
   @media #{$screen-max-sm} {
+    &__ecosystem-wrapper {
+      padding: 64px 0 80px 0;
+    }
+
     &__ecosystem {
+      &__hero {
+        max-width: 526px;
+        margin: 0 auto;
+
+        &__title {
+          @include h4;
+
+          text-align: center;
+
+          & > br {
+            display: block;
+          }
+        }
+
+        &__subtitle {
+          @include base-3;
+
+          max-width: unset;
+        }
+      }
+
       &__apps {
-        // padding: 0 10px;
+        margin-top: 64px;
 
         &__title {
           max-width: 526px;
@@ -503,6 +537,8 @@
       }
 
       &__developers {
+        margin-top: 64px;
+
         &__main {
           max-width: 526px;
 
