Update all landing page image pngs with webps

--- a/src/components/index-page/Ecosystem/styles.scss
+++ b/src/components/index-page/Ecosystem/styles.scss
@@ -225,7 +225,7 @@
           width: 584px;
           height: 436px;
           padding: 22px 23px;
-          background: url('../../../assets/images/landing/code-background.png');
+          background: url('../../../assets/images/landing/code-background.webp');
           background-repeat: no-repeat;
           background-size: cover;
 
