Update start your own community card section titles to use the md variant

--- a/src/components/index-page/Ecosystem/styles.scss
+++ b/src/components/index-page/Ecosystem/styles.scss
@@ -299,7 +299,7 @@
           }
 
           &__section-title {
-            @include section-title;
+            @include section-title-md;
 
             margin-top: 24px;
             color: #6c6cff;
